# midjourney_automation_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/midjourney/adapters/discord/: discord_engine.py
src/midjourney/adapters/factors/: daily_factors.py
src/midjourney/adapters/prompts/: prompt_engine.py
src/midjourney/config/: container.py  load_config.py
src/midjourney/core/: main.py
src/midjourney/domain/: i_daily_factors.py  i_discord_engine.py  i_prompt_engine.py
src/midjourney/utils/logger/: app_logger.py  logger.py
