[project]
name = "midjourney_automation"
version = "0.1.0"
description = "Midjourney Discord automation bot"
authors = [{name = "Harsh Bhardwaj"}]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

